--- a/index.html
+++ b/index.html
@@ -4,16 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Protfolio</title>
-</head>
-<body>
-    <header>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="css/portfoliocss.css">
+</head>
+<body class="open-sans-normal">
+    <header style="background-color:#FFF8F3;">
+        <nav>
+            <h3 class="nav-title">Me<span class="text-primary">r</span>y</h3>
+            <ul>
+                <li><a class="dark-2" href="">Protfolio</a></li>
+                <li><a class="dark-2" href="">Blog</a></li>
+                <li><a href=""><button class="bnt-primary">Hire Me</button></a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h4 class="banner-greeting">Hi, I  am</h4>
+                <h1 class="banner-heding">Mary Hardy</h1>
+                <p class="banner-paragraph">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button>Download CV</button>
+                <button>Contract</button>
+            </div>
+            <img src="images/hardy.png" alt="Hardy imge" height="676px" width="584px">
+        </div>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
