Banner Hero complete

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         </nav>
         <div class="banner">
             <div class="banner-content">
-                <h4 class="banner-greeting">Hi, I  am</h4>
-                <h1 class="banner-heding">Mary Hardy</h1>
-                <p class="banner-paragraph">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button>Download CV</button>
-                <button>Contract</button>
+                <h4 class="banner-greeting dark-2">Hi, I  am</h4>
+                <h1 class="banner-hading dark-1">Mary Hardy</h1>
+                <p class="banner-paragraph dark-3">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class=" bnt-style-1 bnt-primary">Download CV</button>
+                <button class="bnt-style-2 bnt-primary">Contract</button>
             </div>
-            <img src="images/hardy.png" alt="Hardy imge" height="676px" width="584px">
+            <img class="banner-img" src="images/hardy.png" alt="Hardy img">
         </div>
     </header>
     <main>
