Heder complite final

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/portfoliocss.css">
 </head>
 <body class="open-sans-normal">
-    <header style="background-color:#FFF8F3;">
+    <header class="header">
         <nav>
             <h3 class="nav-title">Me<span class="text-primary">r</span>y</h3>
             <ul>
