--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/portfoliocss.css">
 </head>
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secondary-bg">
         <nav>
             <h3 class="nav-title">Me<span class="text-primary">r</span>y</h3>
             <ul>
@@ -20,7 +20,7 @@
                 <li><a href=""><button class="bnt-primary">Hire Me</button></a></li>
             </ul>
         </nav>
-        <div class="banner">
+        <div class="banner secondary-bg">
             <div class="banner-content">
                 <h4 class="banner-greeting dark-2">Hi, I  am</h4>
                 <h1 class="banner-hading dark-1">Mary Hardy</h1>
@@ -32,7 +32,30 @@
         </div>
     </header>
     <main>
-
+        <section class="about secondary-bg">
+            <div class=" container-item">
+                <h3 class="title-style-share">About Me</h3>
+                <p class="about-description-share">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+                <div class="items">
+                <div class="about-item">
+                    <p class="item-title">Name:</p>
+                    <p class="item-description">Mary Hardy</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email:</p>
+                    <p class="item-description">nfo@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Date of birth:</p>
+                    <p class="item-description">11 November 1987</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">From:</p>
+                    <p class="item-description">Los Angeles, USA</p>
+                </div>
+            </div>
+            </div>
+        </section>
     </main>
     <footer>
 
