added footer section and complete

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/portfoliocss.css">
+    <script src="https://kit.fontawesome.com/c10d7cfbe7.js" crossorigin="anonymous"></script>
 </head>
 <body class="open-sans-normal">
     <header class="header secondary-bg">
@@ -25,8 +26,8 @@
                 <h4 class="banner-greeting dark-2">Hi, I  am</h4>
                 <h1 class="banner-hading dark-1">Mary Hardy</h1>
                 <p class="banner-paragraph dark-3">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class=" bnt-style-1 bnt-primary">Download CV</button>
-                <button class="bnt-style-2 bnt-primary">Contract</button>
+                <button class=" bnt-style-1 bnt-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="bnt-style-2 bnt-primary"><i class="fa-solid fa-phone"></i> Contract</button>
             </div>
             <img class="banner-img" src="images/hardy.png" alt="Hardy img">
         </div>
@@ -138,13 +139,31 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
                 </div>
             </div>
             <div class="bnt-secondary-container">
-                <button class="bnt-secondary">Download CV</button>
+                <button class="bnt-secondary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
             
         </section>
     </main>
-    <footer>
-
+    <footer class="secondary-bg">
+       <div class="footer-column">
+        <h3 class="footer-title footer-column-style">Lets Connect</h3>
+        <p class="footer-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+        <div class="icon">
+            <a href="https://www.facebook.com/hossain.kibriya/" target="_blank"><img src="images/icons/facebook.png" alt=""></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="images/icons/insta.png" alt=""></a>
+            <a href="https://x.com/?lang=en" target="_blank"><img src="images/icons/twitter.png" alt=""></a>
+        </div>
+       </div>
+       <div class="footer-column">
+        <h3 class="section-title footer-column-style">Let’s Message me</h3>
+        <form action="">
+            <input type="text" name="" id="" placeholder="Your Name">
+            <input type="email" name="" id="" placeholder="Your email">
+            <textarea name="" id="" placeholder="Message" cols="30" rows="10"></textarea>
+            <input class="bnt-primary" type="submit" value="Submit" placeholder="submit">
+        </form>
+        
+       </div>
     </footer>
 </body>
 </html>
